[package]
name = "tao-glutin"
version = "0.1.0"
description = "Cross-platform OpenGL context provider."
keywords = ["windowing", "opengl"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/rust-windowing/glutin"
documentation = "https://docs.rs/glutin"
edition = "2018"

[lib]
name = "glutin"

[dependencies]
lazy_static = "1.3"
tao = { git = "https://github.com/tauri-apps/tao", branch = "next", version = "0.5", default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
android_glue = "0.2"
glutin_egl_sys = { version = "0.1.4", path = "../glutin_egl_sys" }
parking_lot = "0.11"

[target.'cfg(target_os = "emscripten")'.dependencies]
glutin_emscripten_sys = { version = "0.1.1", path = "../glutin_emscripten_sys" }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
objc = "0.2.6"
glutin_gles2_sys = { version = "0.1.4", path = "../glutin_gles2_sys" }

[target.'cfg(target_os = "macos")'.dependencies]
cgl = "0.3"
cocoa = "0.24"
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = [
    "winnt",
    "winuser",
    "wingdi",
    "libloaderapi",
]

[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.7"
glutin_wgl_sys = { version = "0.1.4", path = "../glutin_wgl_sys" }
glutin_egl_sys = { version = "0.1.4", path = "../glutin_egl_sys" }
parking_lot = "0.11"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
parking_lot = "0.11"
log = "0.4"
gtk = "0.14"
gdk = "0.14"
gdkx11 = "0.14"
glib= "0.14"
gl_loader = "0.1.2"
