[package]
name = "glutin_tao"
version = "0.33.0"
authors = [ "Kirill Chibisov <contact@kchibisov.com>" ]
description = "Glutin bootstrapping helpers with tao"
keywords = [ "windowing", "opengl", "tao" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rust-windowing/glutin"
edition = "2021"

[features]
default = [ "egl", "x11", "wayland", "wgl" ]
egl = [ "glutin/egl" ]
wgl = [ "glutin/wgl" ]
x11 = [ "glutin/x11" ]
wayland = [ "glutin/wayland" ]

[dependencies]
winit = { package = "tao", version = "0.19.0", default-features = false }
glutin = { version = "0.30.1", default-features = false }
raw-window-handle = "0.5.0"

[build-dependencies]
cfg_aliases = "0.1.1"
